# MIT-MachineLearning-MicroMasters

./: .buildinfo  .gitignore  00 Couse Overview.html  00 Couse Overview.md  INTRO.md  README.html  README.md  _config.yml  _toc.yml  catchup.md  environment.yml  extract_base64_attachments.py  genindex.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
00 Self Exploration/: Similarity.ipynb  extract_image.py
00_Self_Exploration/: Concepts.ipynb  Linear_Algebra.ipynb
Assorted Projects/: graphRAG.ipynb
Project 1 Automatic Review Analyzer/: project.ipynb  test_utils.py
Project 2 Digit Recognition/: 00 Digital Recognition MNIST.ipynb  01 Linear Regression (Closed Form Solution).ipynb  02 Support Vector Machine.ipynb  03 Softmax and Cross Entrphy Loss.ipynb  Sigmoid.ipynb
Project_Automatic_Review_Analyzer/: utils.py
Project_Disease_Sympton_Prediction/: README.md
Project_text_classification/: nlp-all-libraries-detailed-explanation.ipynb  text-classification-using-spacy.ipynb
Unit 0 Prerequisite/: Standard Notations.html
Unit 1 Linear Classifiers and Generalizations/: 01 Linear Classifiers.ipynb  02 Perceptron.ipynb  03 Loss Function and Hinge Loss.ipynb  05 Gradient Descent.ipynb
Unit 2/: 07 Nonlinear Classification.ipynb  08 Principal Component Analysis.ipynb
Unit 3/: 09 Embeddings.ipynb  09 Neural Network.ipynb
Unit00_Prerequisite/: 01_Summation.ipynb  02_Product_Notation.ipynb  09_Gradients.ipynb  Standard_Notations.ipynb
Unit01/: 01_Linear_Classifiers.ipynb  02_Perceptron.ipynb  03_Loss_Function_and_Hinge_Loss.ipynb  (+2 more)
(+69 files in other folders)
